Clean up formatting and consistency